--- a/views/donate.html
+++ b/views/donate.html
@@ -1,9 +1,9 @@
 <% include header.html %>
 
-<h2 class="blue">Donate an Auction Item Form</h2>
+<h2 class="blue">Donate an Auction Item</h2>
   <form id="donateForm" method="POST" action="/donate">
       <fieldset>
-          <legend>Auction Item Donation</legend>
+          <legend>Auction Item Donation Form</legend>
           <div class="form-horizontal">
             <div class="control-group">
               <label for="company" class="control-label">Donor Name</label>
