finished manage portion of donations

--- a/views/manage/header.html
+++ b/views/manage/header.html
@@ -50,8 +50,8 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
             <li><a class="active" href="/">Back to Site</a></li>
-            <li><a href="submissions">Submissions</a></li>
-            <li><a href="account">Account</a></li>
+            <li><a href="/manage">Submissions</a></li>
+            <li><a href="/manage/donations">Donations</a></li>
             </ul>
           </div>
      
