fixed styling on sponsor page

--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="row-fluid">
+    <div class="row-fluid" style="clear: left;">
       <div class="span4">
         <h3>CO-STAR - $5,000</h3>
         <ul>
@@ -63,7 +63,7 @@
         </ul>
       </div>
     </div>
-    <div class="row-fluid">
+    <div class="row-fluid" style="clear:left;">
       <div class="span4">
         <h3>UNDERWRITER - $1,500</h3>
         <ul>
@@ -88,7 +88,7 @@
         </ul>
       </div>
     </div>
-    <div class="row-fluid">
+    <div class="row-fluid" style="clear:left;">
       <div class="span4">
         <h3>EXTRA - $150</h3>
         <ul>
