--- a/views/history.html
+++ b/views/history.html
@@ -1,11 +1,14 @@
 <% include header.html %>
- <h2>Our History</h2>
- <p class="lead">Since 1948, Ozanam has helped thousands of children and families dealing with emotional, behavioral and learning disabilities begin to get their lives back on track.</p>
+ <h2>Ozanam</h2>
+  <p class="lead">Since 1948, Ozanam has helped thousands of at-risk youth dealing with emotional, behavioral and learning disabilities begin to get their lives back on track.</p>
 
-  <p>Ozanam provides therapeutic residential and day treatment programs, transitional living services for older youth, a mentoring program for youth in foster care, and consultation services for hundreds of schools. Approximately 75 boys and girls, ages 12 to 18, live on Ozanam's 96-acre main campus in south Kansas City. Additional students attend our on-campus school, which is accredited by the North Central Association.  The majority of children Ozanam serves come from Missouri or Kansas. Children are referred by parents, social service agencies, school districts, the courts and private insurance companies.</p>
-  <p>Ozanam is a partner in co-educational day treatment with the Belton School District in Missouri. The Belton/Ozanam Southland Cooperative (BOSCO) serves children in grades K-12 living in these areas.  Through the Behavioral Intervention Support Team (BIST), Ozanam trains educators to work more effectively with children in their classrooms who require special help. Last year, Ozanam contracted with more than 300 schools throughout the Midwest. More than 500,000 children are in schools impacted by the BIST program.</p>
-  <p>Through its Pathways Transitional Living Program, Ozanam helps young adults in Kansas City and Wichita who are at risk of becoming homeless by providing shelter, life skills and job training. During the one year program, Pathways covers most living expenses while residents work or attend school while building savings accounts for the future.</p>
-  <p>Its Mentoring Program links caring adult volunteers with youth, ages 7 to 21, who are in foster care placements throughout the Kansas City area.</p>  
+  <p>Ozanam is a non-profit, social service agency located in Kansas City. On our main campus, our Residential Treatment Program provides therapeutic services in a home-like setting for boys and girls, ages 12 to 18, who are dealing with emotional, behavioral and learning disabilities. Additional students receive special education at Ozanam School as part of our Day Treatment Program.</p>
+
+  <p>Beyond our main campus, Ozanam also provides several community-based programs. Our Pathways Transitional Living Program provides shelter and support services throughout Kansas City and Wichita to young adults who are at-risk of becoming homeless. Our Mentoring Program connects positive adult leaders to children in foster care who have very few resources. Ozanam further impacts the community by offering educational consultation services to more than 300 schools throughout the Midwest.</p>
+
+  <p>Ozanam directly serves more than 200 youth daily and approximately 600 youth annually. Our goal is to help these boys and girls heal from past trauma, catch up in school, pursue vocational opportunities, learn life skills, form positive relationships, and begin to succeed in their homes, schools and communities. We could not do this without your support! Together we can help some of the most vulnerable youth become happy, healthy and productive members of society.</p>
+
+  <p>For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
 <% include footer.html %>
 <% include scripts.html %>
 <% include tail.html %>
