--- a/views/header.html
+++ b/views/header.html
@@ -56,10 +56,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
             <li><a class="active" href="/">Event</a></li>
-            <li><a href="/history">History</a></li>
-            <li><a href="/sponsor">Sponsor</a></li>
-            <li><a href="/register">Register</a></li>
-            <li><a href="/donate">Donate</a></li>
+            <li><a href="/auction">Auction</a></li>
+            <li><a href="/sponsor">Sponsorships</a></li>
+            <li><a href="/register">Registration</a></li>
+            <li><a href="/history">Ozanam</a></li>
             </ul>
           </div>
      
