--- a/views/register.html
+++ b/views/register.html
@@ -1,5 +1,5 @@
 <% include header.html %>
-<h2 class="blue">Register</h2>
+<h2 class="blue">Registration</h2>
   <form id="registrationForm" method="POST" action="/register">
       <fieldset>
           <legend>Corporate Sponsor Agreement</legend>
@@ -64,20 +64,20 @@
               <div class="controls controls-row">
                   <div class="span6">
                     <ul>
-                      <li><label for="level_1"><input type="radio" name="level" id="level_1" value="1"/> Hollywood Star ($25,000 +)</label></li>
-                      <li><label for="level_2"><input type="radio" name="level" id="level_2" value="2"/> Major Star ($15,000)</label></li>
-                    <li><label for="level_3"><input type="radio" name="level" id="level_3" value="3"/> Star ($10,000)</label></li>
-                    <li><label for="level_4"><input type="radio" name="level" id="level_4" value="4"/> Co-Star ($5,000)</label></li>
-                    <li><label for="level_5"><input type="radio" name="level" id="level_5" value="5"/> Producer ($3,000)</label></li>
+                      <li><label for="level_1"><input type="radio" name="level" id="level_1" value="1"/> Hollywood Star $25,000 + (30 seats)</label></li>
+                      <li><label for="level_2"><input type="radio" name="level" id="level_2" value="2"/> Major Star $15,000 (20 seats)</label></li>
+                    <li><label for="level_3"><input type="radio" name="level" id="level_3" value="3"/> Star $10,000 (10 seats)</label></li>
+                    <li><label for="level_4"><input type="radio" name="level" id="level_4" value="4"/> Co-Star $5,000 (10 seats)</label></li>
+                    <li><label for="level_5"><input type="radio" name="level" id="level_5" value="5"/> Producer $3,000 (10 seats)</label></li>
                   </ul>
                     
                   </div>
                   <div class="span6">
                     <ul>
-                      <li><label for="level_6"><input type="radio" name="level" id="level_6" value="6"/> Table Host ($25,000 +)</label></li>
-                      <li><label for="level_7"><input type="radio" name="level" id="level_7" value="7"/> Underwriter ($15,000)</label></li>
-                      <li><label for="level_8"><input type="radio" name="level" id="level_8" value="8"/> Supporting Cast ($10,000)</label></li>
-                      <li><label for="level_9"><input type="radio" name="level" id="level_9" value="9"/> Corporate Sponsor ($5,000)</label></li>
+                      <li><label for="level_6"><input type="radio" name="level" id="level_6" value="6"/> Table Sponsor $2,000 (10 seats)</label></li>
+                      <li><label for="level_7"><input type="radio" name="level" id="level_7" value="7"/> Underwriter $1,500 (2 seats)</label></li>
+                      <li><label for="level_8"><input type="radio" name="level" id="level_8" value="8"/> Supporting Cast $750 (4 seats)</label></li>
+                      <li><label for="level_9"><input type="radio" name="level" id="level_9" value="9"/> Corporate Sponsor $450 (2 seats)</label></li>
                       <li><label for="level_10"><input type="radio" name="level" id="level_10" value="10" checked/> Extra Seats Only</label></li>
                     </ul>
                   </div>
@@ -86,7 +86,28 @@
             <div class="control-group">
               <label class="control-label">Extra Seats</label>
               <div class="controls">
-                <label for="extra"><input type="number" min="0" step="1" name="extra" id="extra" placeholder="#"/></label> ($150/seat)
+                <div class="input-append">
+                <input type="number" min="0" step="1" name="extra" id="extra" placeholder="#"/>
+                <span class="add-on"> ($150/ea)</span>
+                </div>
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label">Donation</label>
+              <div class="controls">
+                <div class="input-prepend input-append">
+                  <span class="add-on">$</span>
+                  <input type="number" min="0" step="1" name="donation" id="extra" placeholder="0"/>
+                  <span class="add-on">.00</span>
+                </div>
+                <div class="help-block muted">I am unable to attend the event but would like to make a donation.</div>
+              </div>
+            </div>
+            <div class="control-group">
+              <label for="seating" class="control-label">Seating Location</label>
+              <div class="controls">
+                  <input type="text" name="seating" id="seating"/>
+                  <div class="help-block muted">We would like to be seated near the these individuals or companies at the event if possible.</div>
               </div>
             </div>
             <div class="control-group">
@@ -100,16 +121,23 @@
               </div>
             </div>
             <div class="control-group">
-              <label for="boardMember" class="control-label">Board Member</label>
+              <label for="boardMember" class="control-label">Board / Committee Member</label>
               <div class="controls">
                   <input type="text" name="boardMember" id="boardMember"/>
-                  <div class="help-block muted">Did one of the Ozanam board members refer  you? Enter his/her name here.</div>
+                  <div class="help-block muted">Did one of Ozanam's supporters refer you? Enter his/her name here.</div>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="controls">
+                <label for="sendInvoice"><input type="checkbox" id="sendInvoice" name="sendInvoice" value="true"/> Please send me an invoice, and I will remit a check payable to Ozanam.</label>
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
                   <button type="submit" class="btn btn-large">Register</button>
               </div>
+            </div>
+            <div id="error" class="hide alert alert-error">
             </div>
       </fieldset>
   </form>
