Edits for Laurie.

--- a/views/donate.html
+++ b/views/donate.html
@@ -81,11 +81,6 @@
             <legend>Please check all that apply:</legend>
             <div class="control-group">
               <div class="controls">
-                <label for="optionDeliveredWithForm"><input type="checkbox" id="optionDeliveredWithForm" name="optionDeliveredWithForm" value="true"/> Item/Certificate delivered with form</label>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls">
                 <label for="optionSelfDelivery"><input type="checkbox" id="optionSelfDelivery" name="optionSelfDelivery" value="true"/> I will deliver my item on (date).</label> <input type="text" id="selfDeliveryDate" name="selfDeliveryDate" size="10" class="span2 datepicker"/>
               </div>
             </div>
@@ -101,7 +96,7 @@
             </div>
             <div class="control-group">
               <div class="controls">
-                <label for="optionDisplayMaterials"><input type="checkbox" id="optionDisplayMaterials" name="optionDisplayMaterials" value="true"/> I have enclosed brochures, photos, or display materials.</label>
+                <label for="optionDisplayMaterials"><input type="checkbox" id="optionDisplayMaterials" name="optionDisplayMaterials" value="true"/>I will provide brochures, photos or display materials.</label>
               </div>
             </div>
             <div class="control-group">
