--- a/views/register.html
+++ b/views/register.html
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="control-group sponsorships">
-              <label class="control-label">Sponsorship</label>
+              <a id="sponsor"></a><label class="control-label">Sponsorship</label>
               <div class="controls controls-row">
                   <div class="span6">
                     <ul>
@@ -90,6 +90,7 @@
                 <input type="number" min="0" step="1" name="extra" id="extra" placeholder="#"/>
                 <span class="add-on"> ($150/ea)</span>
                 </div>
+                <div class="help-block muted">Enter the number of seats</div>
               </div>
             </div>
             <div class="control-group">
