--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -3,7 +3,7 @@
   <div  id="sponsor">
     <div class="row-fluid">
       <div class="span4">
-        <h3>HOLLYWOOD STAR - $25,000</h3>
+        <h3><a href="/register#sponsor">HOLLYWOOD STAR - $25,000+</a></h3>
         <ul>
           <li>Three tables for 10 with preferential seating; customized table sign.</li>
           <li>Included in all publicity, including online promotion.</li>
@@ -13,7 +13,7 @@
         </ul>
       </div>
       <div class="span4">
-        <h3>MAJOR STAR- $15,000</h3>
+        <h3><a href="/register#sponsor">MAJOR STAR- $15,000</a></h3>
         <ul>
           <li>Two tables for 10 with preferential seating; customized table sign.</li>
           <li>Included in all publicity, including online promotion.</li>
@@ -23,7 +23,7 @@
         </ul>
      </div>
       <div class="span4">
-        <h3>STAR - $10,000</h3>
+        <h3><a href="/register#sponsor">STAR - $10,000</a></h3>
         <ul>
           <li>Table for 10 with preferential seating; customized table sign.</li>
           <li>Included in all publicity, including online promotion.</li>
@@ -36,7 +36,7 @@
 
     <div class="row-fluid" style="clear: left;">
       <div class="span4">
-        <h3>CO-STAR - $5,000</h3>
+        <h3><a href="/register#sponsor">CO-STAR - $5,000</a></h3>
         <ul>
           <li>Table for 10 with preferential seating; customized table sign.</li>
           <li>Name displayed in program.</li>
@@ -45,7 +45,7 @@
         </ul>
       </div>
       <div class="span4">
-        <h3>PRODUCER - $3,000</h3>
+        <h3><a href="/register#sponsor">PRODUCER - $3,000</a></h3>
         <ul>
           <li>Table for 10 with customized table sign.</li>
           <li>Name listed in program.</li>
@@ -54,7 +54,7 @@
         </ul>
      </div>
       <div class="span4">
-        <h3>TABLE SPONSOR - $2,000</h3>
+        <h3><a href="/register#sponsor">TABLE SPONSOR - $2,000</a></h3>
         <ul>
           <li>Table for 10.</li>
           <li>Name listed in program.</li>
@@ -65,7 +65,7 @@
     </div>
     <div class="row-fluid" style="clear:left;">
       <div class="span4">
-        <h3>UNDERWRITER - $1,500</h3>
+        <h3><a href="/register#sponsor">UNDERWRITER - $1,500</a></h3>
         <ul>
           <li>Two entrances to the Gala.</li>
           <li>Name listed in program.</li>
@@ -74,14 +74,14 @@
         </ul>
       </div>
       <div class="span4">
-        <h3>SUPPORTING CAST - $750</h3>
+        <h3><a href="/register#sponsor">SUPPORTING CAST - $750</a></h3>
         <ul>
           <li>Four entrances to the Gala.</li>
           <li>Name listed in program.</li>
         </ul>
      </div>
       <div class="span4">
-        <h3>CORPORATE SPONSOR - $450</h3>
+        <h3><a href="/register#sponsor">CORPORATE SPONSOR - $450</a></h3>
         <ul>
           <li>Two entrances to the Gala.</li>
           <li>Name listed in program.</li>
@@ -90,7 +90,7 @@
     </div>
     <div class="row-fluid" style="clear:left;">
       <div class="span4">
-        <h3>EXTRA - $150</h3>
+        <h3><a href="/register#sponsor">EXTRA - $150</a></h3>
         <ul>
           <li>Once entrance to the Gala.</li>
         </ul>
