--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -32,6 +32,7 @@ fieldset {
   font-size: 15;
   line-height: 32px;
 }
+#sponsor h3 a { color: #98464e;}
 
 #wrap {
    background: transparent url('../img/stars.gif') repeat;
