--- a/views/footer.html
+++ b/views/footer.html
@@ -35,7 +35,7 @@
               </div>
               <div class="span3 text-right mobile-center">
                 <a href="http://www.facebook.com/pages/Ozanam/168776827476" class="social-icon facebook" title="Visit us on facebook!"></a>
-                <a href="#" class="social-icon twitter" title="Visit us on Twitter!"></a>
+                <a href="https://twitter.com/Ozanamhome" class="social-icon twitter" title="Visit us on Twitter!"></a>
                 <a href="http://www.ozanamhome.wordpress.com/" class="social-icon feed" title="Stay up-to-date by reading our blog!"></a>
               </div>
             </div>
