big updates. added images and header areas for the images. Linked to S3

--- a/views/history.html
+++ b/views/history.html
@@ -1,4 +1,8 @@
 <% include header.html %>
+<div class="image-web3"></div>
+<div id="wrap">
+<div class="container content">
+  <!-- content start  -->
  <h2>Ozanam</h2>
   <p class="lead">Since 1948, Ozanam has helped thousands of at-risk youth dealing with emotional, behavioral and learning disabilities begin to get their lives back on track.</p>
 
