--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,8 @@
 <% include header.html %>
+<div class="image-web2"></div>
+<div id="wrap">
+<div class="container content">
+  <!-- content start  -->
   <h2>Ozanam Hollywood Holiday Gala</h2>
   <img src="img/gala-logo.gif" align="right"/>
   <p>This will be the 30th year of Ozanam's Hollywood Holiday Gala, which began as a movie benefit in 1983. Throughout the past three decades, it has evolved into Ozanam's largest fundraiser of the year. Recently it was even recognized as one of the "Top 10" Events in Kansas City! Last year, nearly 800 people attended the event and helped us to raise more than $600,000!
@@ -7,6 +11,7 @@
   <p>Our Gala Chairmen this year are Karen & Chuck Peters, who have been longtime supporters of Ozanam. We are also proud to have Rita & Lamar Hunt, Jr. serving as our Honorary Chairmen for the evening. Since the event's inception, Larry Moore has served as our distinguished Master of Ceremonies, and we are pleased to have his participation once again.</p>
 
   <p>All of the proceeds from the Gala support the life-saving programs and services for at-risk youth at Ozanam. Since 1948, Ozanam has provided residential treatment, day treatment, mentoring, transitional living, and school consultation services to hundreds of boys and girls each year. For more information about Ozanam, please visit <a href="http://www.ozanam.org">www.ozanam.org</a>.</p>
+
 <% include footer.html %>
 <% include scripts.html %>
 <% include tail.html %>
