--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,7 @@
 <% include header.html %>
+<div id="wrap">
+<div class="container content">
+  <!-- content start  -->
 <h2 class="blue">Registration</h2>
   <form id="registrationForm" method="POST" action="/register">
       <fieldset>
