--- a/views/donate.html
+++ b/views/donate.html
@@ -1,4 +1,7 @@
 <% include header.html %>
+<div id="wrap">
+  <div class="container content">
+  <!-- content start  -->
 
 <h2 class="blue">Donate an Auction Item</h2>
   <form id="donateForm" method="POST" action="/auction">
