--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -1,4 +1,8 @@
 <% include header.html %>
+<div class="image-web1"></div>
+<div id="wrap">
+<div class="container content">
+  <!-- content start  -->
   <h2>Sponsorship Levels</h2>
   <div  id="sponsor">
     <div class="row-fluid">
