--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -180,19 +180,19 @@ body p.lead {
 .image-web1 {
   width: 100%;
   height: 408px;
-  background: url('//assets.ozanamgala.org.s3.amazonaws.com/web1.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web1.jpg') center center no-repeat;
   background-size: cover;
 }
 .image-web2 {
   width: 100%;
   height: 408px;
-  background: url('//assets.ozanamgala.org.s3.amazonaws.com/web2.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web2.jpg') center center no-repeat;
   background-size: cover;
 }
 .image-web3 {
   width: 100%;
   height: 408px;
-  background: url('//assets.ozanamgala.org.s3.amazonaws.com/web3.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web3.jpg') center center no-repeat;
   background-size: cover;
 }
 .navbar { margin-bottom: 0;}
