--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -175,6 +175,7 @@ body p.lead {
 .sponsorships li {
   display: block;
 }
+.navbar { margin-bottom: 0;}
 
 
 .image-web1 {
@@ -195,4 +196,9 @@ body p.lead {
   background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web3.jpg') center center no-repeat;
   background-size: cover;
 }
-.navbar { margin-bottom: 0;}
+.image-web3 {
+  width: 100%;
+  height: 408px;
+  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web4.jpg') center center no-repeat;
+  background-size: cover;
+}
