--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -181,24 +181,24 @@ body p.lead {
 .image-web1 {
   width: 100%;
   height: 408px;
-  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web1.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org/web1.jpg') center center no-repeat;
   background-size: cover;
 }
 .image-web2 {
   width: 100%;
   height: 408px;
-  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web2.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org/web2.jpg') center center no-repeat;
   background-size: cover;
 }
 .image-web3 {
   width: 100%;
   height: 408px;
-  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web3.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org/web3.jpg') center center no-repeat;
   background-size: cover;
 }
 .image-web4 {
   width: 100%;
   height: 408px;
-  background: url('http://assets.ozanamgala.org.s3.amazonaws.com/web4.jpg') center center no-repeat;
+  background: url('http://assets.ozanamgala.org/web4.jpg') center center no-repeat;
   background-size: cover;
 }
