added payment option and confirmation display updates.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -202,3 +202,6 @@ body p.lead {
   background: url('http://assets.ozanamgala.org/web4.jpg') center center no-repeat;
   background-size: cover;
 }
+.monotype {
+  font-family: consolas;
+}
