--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -5,18 +5,19 @@
 
 <h2>Thank You!</h2>
 
-<p>We will contact you soon to confirm your sponsorship.</p>
+<p>We will contact you soon to confirm your sponsorship. Your confirmation code is: </p>
+<p class="monotype"><%=confirm.toUpperCase()%></p>
 
-<p>Please share this event with your friends and associates.</p>
-
-<p>
-      <span class='st_googleplus_hcount' displayText='Google +'></span>
-      <span class='st_facebook_hcount' displayText='Facebook'></span>
-      <span class='st_twitter_hcount' displayText='Tweet'></span>
-      <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-      <span class='st_reddit_hcount' displayText='Reddit'></span>
-      <span class='st_pinterest_hcount' displayText='Pinterest'></span>
+<p>Mail a check for the amount of <span class="monotype">$<%=amount%></span> payable to:
+<address>
+  <strong>Ozanam</strong><br>
+  421 E 137th Street<br>
+  Kansas City, MO 64145<br>
+</address>
 </p>
+
+<p>Please share this event with your friends and colleagues.</p>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <% include footer.html %>
