work in progress

--- a/views/register.html
+++ b/views/register.html
@@ -135,7 +135,7 @@
               <label for="paymentOption" class="control-label">Payment</label>
               <div class="controls">
                 <p>Would you like to pay now with PayPal?</p>
-                <label for="paymentOptionPayPal" class="muted"><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" disabled/> Yes, I want to pay with PayPal now. <small style="color: navy !important;">(Coming Soon)!</small></label>
+                <label for="paymentOptionPayPal"><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal"/> Yes, I want to pay with PayPal now.</label>
                 <br/><label for="paymentOptionCheck"><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" checked/> No, I'd like to pay with a check.</label>
               </div>
             </div>
