work in progress, continued. Basic paypal call; learning the API.

--- a/views/register.html
+++ b/views/register.html
@@ -134,8 +134,8 @@
             <div class="control-group">
               <label for="paymentOption" class="control-label">Payment</label>
               <div class="controls">
-                <p>Would you like to pay now with PayPal?</p>
-                <label for="paymentOptionPayPal"><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal"/> Yes, I want to pay with PayPal now.</label>
+                <p>Would you like to pay now with <img src="/img/paypal.gif" border="0" alt="PayPal"/>?</p>
+                <label for="paymentOptionPayPal"><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal"/> Yes, I want to pay with <img src="/img/paypal.gif" border="0" alt="PayPal"/> now.</label>
                 <br/><label for="paymentOptionCheck"><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" checked/> No, I'd like to pay with a check.</label>
               </div>
             </div>
