working paypal, but needs better workflow.

--- a/views/cancel.html
+++ b/views/cancel.html
@@ -2,8 +2,9 @@
 <div id="wrap">
 <div class="container content">
   <!-- content start  -->
-<h2 class="blue">Registration Payment Cancelled</h2>
-<p>We will contact you soon to confirm your sponsorship. Your confirmation code is: </p>
+<h2 class="blue">Registration</h2>
+<h3>Payment Cancelled</h3>
+<p>Your payment is cancelled but your sponsorship still registered successfully. We will contact you soon to confirm your sponsorship. Your confirmation code is: </p>
 <p class="monotype"><%=id.toUpperCase()%></p>
 
 <p>Please mail a check for the amount of <span class="monotype">$<%=amount%></span> payable to:
