--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -8,6 +8,7 @@
 <p>We will contact you soon to confirm your sponsorship. Your confirmation code is: </p>
 <p class="monotype"><%=confirm.toUpperCase()%></p>
 
+<%if(payment === 'check') {%>
 <p>Mail a check for the amount of <span class="monotype">$<%=amount%></span> payable to:
 <address>
   <strong>Ozanam</strong><br>
@@ -15,7 +16,13 @@
   Kansas City, MO 64145<br>
 </address>
 </p>
-
+<%}
+else {%>
+<p>
+  <form method="POST" action="/register/paypal">
+    <button type="submit" class="btn btn-large btn-primary">Checkout with PayPal</button>
+  </form>
+<%}%>
 <p>Please share this event with your friends and colleagues.</p>
 
 <p>&nbsp;</p>
