work in progress. Changing the submisssion workflow on register

--- a/views/register.html
+++ b/views/register.html
@@ -132,16 +132,8 @@
               </div>
             </div>
             <div class="control-group">
-              <label for="paymentOption" class="control-label">Payment</label>
               <div class="controls">
-                <p>Would you like to pay now with <img src="/img/paypal.gif" border="0" alt="PayPal"/>?</p>
-                <label for="paymentOptionPayPal"><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal"/> Yes, I want to pay with <img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label>
-                <br/><label for="paymentOptionCheck"><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" checked/> No, I'd like to pay with a check.</label>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls">
-                  <button type="submit" class="btn btn-large">Register</button>
+                  <button type="submit" class="btn btn-large">Continue</button>
               </div>
             </div>
             <div id="error" class="hide alert alert-error">
