work in progress. temp checkin; switching projects...

--- a/views/confirm.html
+++ b/views/confirm.html
@@ -64,7 +64,7 @@
             <div class="control-group sponsorships">
               <a id="sponsor"></a><label class="control-label">Sponsorship</label>
               <div class="controls">
-                <%=sponsorship%>
+                <%=sponsorship.description%>
               </div>
             </div>
             <div class="control-group">
