manage changes + some labeling.

--- a/views/manage/index.html
+++ b/views/manage/index.html
@@ -15,5 +15,6 @@
 
 <% include footer.html %>
 <% include scripts.html %>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.min.js"></script>
 <script type="text/javascript" src="/js/manage/index.js"></script>
 <% include tail.html %>
