changing json sends to res.json

--- a/views/register.html
+++ b/views/register.html
@@ -108,10 +108,10 @@
               </div>
             </div>
             <div class="control-group">
-              <label for="seating" class="control-label">Seating Location</label>
+              <label for="seating" class="control-label">Seating</label>
               <div class="controls">
-                  <input type="text" name="seating" id="seating"/>
-                  <div class="help-block muted">We would like to be seated near the these individuals or companies at the event if possible.</div>
+                <textarea id="seating" name="seating" class="form-control" rows="3"></textarea>
+                <div class="help-block muted">The following individuals will be seated at our table(s). Each table can seat up to 10 people.</div>
               </div>
             </div>
             <div class="control-group">
