--- a/views/scripts.html
+++ b/views/scripts.html
@@ -1,2 +1,3 @@
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script> -->
     <script src="/bootstrap/js/bootstrap.min.js"></script> 
