adding refresh to manage. Updating yes/no to export fields (no is broke)

--- a/views/manage/index.html
+++ b/views/manage/index.html
@@ -1,6 +1,6 @@
 <% include header.html %>
 
-<h2>Submissions</h2>
+<h2>Registrations</h2>
 <p><button id="export" type="button" class="btn btn-large btn-info">Export to Excel</button></p>
 <p><label for="year">Registration Year</label> <select id="year" style="width: auto;">
   <option value="2013" selected>2013</option>
