--- a/views/donationThankyou.html
+++ b/views/donationThankyou.html
@@ -5,7 +5,7 @@
 
 <h2>Thank You!</h2>
 
-<p>We will contact you soon to confirm your registration.</p>
+<p>We appreciate your support. Please contact Kim Gregory at 816-508-3606 or <a href="mailto:Kim.Gregory@ozanam.org">Kim.Gregory@ozanam.org</a> if you have any questions.</p>
 
 <p>Please share this event with your friends and associates.</p>
 
