added tag to footer

--- a/views/register.html
+++ b/views/register.html
@@ -8,9 +8,9 @@
           <legend>Corporate Sponsor Agreement</legend>
           <div class="form-horizontal">
             <div class="control-group">
-              <label for="company" class="control-label">Company</label>
+              <label for="company" class="control-label">Listing Name</label>
               <div class="controls">
-                  <input type="text" name="company" id="company" placeholder="Company Name" required/>
+                  <input type="text" name="company" id="company" placeholder="Company or name to be listed in program" required/>
                   <div class="help-block muted">Please print name as you would like to be listed in the event program.</div>
               </div>
             </div>
@@ -131,8 +131,10 @@
                   <div class="help-block muted">Did one of Ozanam's supporters refer you? Enter his/her name here.</div>
               </div>
             </div>
+
             <div class="control-group">
               <div class="controls">
+                  <p class="well">* Please note: Sponsorship commitments must be received and confirmed by November 1st in order to be included in our event program. Any contributions made after that deadline are still welcome by December 1st and will be recognized in an addendum.</p>
                   <button type="submit" class="btn btn-large">Continue</button>
               </div>
             </div>
